Changelog for DimensionDoor (v2.1.3-SNAPSHOT)

2012-08-10 11:31:46 +0100    update readme (James Richardson)

v2.1.2
2012-08-10 11:18:56 +0100    register to refresh statistics when necessary (James Richardson)
2012-08-10 10:56:11 +0100    more useful metrics (James Richardson)
2012-08-10 10:33:29 +0100    add warning when a generator plugin is required but not loaded (James Richardson)
2012-08-10 10:27:38 +0100    Fix ClassCastException (James Richardson)
2012-08-10 09:44:49 +0100    update readme (James Richardson)

v2.1.1
2012-08-08 06:12:33 +0100    added missing key (James Richardson)
2012-08-07 07:51:05 +0100    add missing key (James Richardson)
2012-08-07 07:49:30 +0100    key mismatch (James Richardson)
2012-08-07 07:46:56 +0100    NPE when checking permission (James Richardson)
2012-08-07 03:13:34 +0100    allow players to access main world by default (James Richardson)
2012-08-07 03:10:37 +0100    fix permissions not registering correctly (James Richardson)
2012-08-07 03:07:32 +0100    added additional keys (James Richardson)
2012-08-07 03:01:22 +0100    localisation fixes (James Richardson)
2012-08-07 02:55:01 +0100    remember to call super loadConfiguration (James Richardson)
2012-08-07 02:52:29 +0100    register world root permission (James Richardson)
2012-08-07 02:49:12 +0100    remove unused imports (James Richardson)
2012-08-07 02:48:42 +0100    only set gamemode when teleporting between worlds (James Richardson)
2012-08-07 02:47:34 +0100    support large biomes (James Richardson)
2012-08-07 02:46:59 +0100    converted to new bukkit utils (James Richardson)
2012-08-02 14:47:56 +0100    fix ClassCastException (James Richardson)
2012-08-02 10:21:40 +0100    switch to using parent pom (James Richardson)
2012-08-02 10:20:16 +0100    fix attempting to save the world before we add it (James Richardson)
2012-08-01 07:39:58 +0100    helps to remember to get the message (James Richardson)