@@ -1,5 +1,6 @@
 Changelog for DimensionDoor (v2.1.3-SNAPSHOT)
 
+2012-10-25 19:59:38 +0100    use latest version of BukkitUtilities (James Richardson)
 2012-08-10 11:31:46 +0100    update readme (James Richardson)
 
 v2.1.2
